--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<meta name="author" content="Allan Jales https://github.com/allanjales/">
 	<meta name="keywords" content="Lethal Company, map, planets, outside, exterior, tool">
 	<meta name="description" content="Free exterior map tool for Lethal Companys">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 	<link rel="icon" href="favicon.webp">
 	<link rel="apple-touch-icon" href="favicon.webp">
 </head>
@@ -23,18 +23,18 @@
 						Maps
 					</button>
 					<ul class="dropdown-menu dropdown-menu-dark position-absolute">
-						<li><button type="button" class="dropdown-item" onclick="changeMap('Experimentation')">Experimentation</button></li>
-						<li><button type="button" class="dropdown-item" onclick="changeMap('Assurance')">Assurance</button></li>
-						<li><button type="button" class="dropdown-item" onclick="changeMap('Vow')">Vow</button></li>
+						<li><button type="button" class="dropdown-item" onclick="changeMoon('Experimentation', true)">Experimentation</button></li>
+						<li><button type="button" class="dropdown-item" onclick="changeMoon('Assurance', true)">Assurance</button></li>
+						<li><button type="button" class="dropdown-item" onclick="changeMoon('Vow', true)">Vow</button></li>
 						<li><div class="dropdown-divider"></div></li>
-						<li><button type="button" class="dropdown-item" onclick="changeMap('Offense')">Offense</button></li>
-						<li><button type="button" class="dropdown-item" onclick="changeMap('March')">March</button></li>
+						<li><button type="button" class="dropdown-item" onclick="changeMoon('Offense', true)">Offense</button></li>
+						<li><button type="button" class="dropdown-item" onclick="changeMoon('March', true)">March</button></li>
 						<li><div class="dropdown-divider"></div></li>
-						<li><button type="button" class="dropdown-item" onclick="changeMap('Rend')">Rend</button></li>
-						<li><button type="button" class="dropdown-item" onclick="changeMap('Dine')">Dine</button></li>
-						<li><button type="button" class="dropdown-item" onclick="changeMap('Titan')">Titan</button></li>
+						<li><button type="button" class="dropdown-item" onclick="changeMoon('Rend', false)">Rend</button></li>
+						<li><button type="button" class="dropdown-item" onclick="changeMoon('Dine', true)">Dine</button></li>
+						<li><button type="button" class="dropdown-item" onclick="changeMoon('Titan', false)">Titan</button></li>
 						<li><div class="dropdown-divider"></div></li>
-						<li><button type="button" class="dropdown-item" onclick="changeMap('Gordion', 'The Company Building')">The Company Building</button></li>
+						<li><button type="button" class="dropdown-item" onclick="changeMoon('Gordion', false, 'The Company Building')">The Company Building</button></li>
 					</ul>
 				</li>
 				<li class="nav-item">
@@ -42,15 +42,41 @@
 				</li>
 			</ul>
 		</nav>
-		<div style="height: calc(100% - 54px);">
-			<img id="mapImage" src="maps/Experimentation.webp" alt="Map" class="img-fluid center mx-auto" style="display: block; max-height: 100%;">
+		<div style="height: calc(100% - 54px);">	
+			<img id="mapImage" class="w-100 h-100 object-fit-contain" src="maps/Experimentation.webp" alt="Map view">
+			<label class="position-absolute bg-danger text-white p-2 rounded" style="bottom: 32px; right: 64px;" for="floodedCheck">
+				<div class="form-check">
+					<input class="form-check-input" type="checkbox" id="floodedCheck" onchange="changeFlooded()">
+					<label class="form-check-label user-select-none" for="floodedCheck">Flooded</label>
+				</div>
+			</label>
 		</div>
 	</div>
 </body>
 <script>
-function changeMap(mapImageName, mapName=null) {
-	document.getElementById("mapImage").src = "maps/" + mapImageName + ".webp";
-	if (mapName == null) mapName = mapImageName;
-	document.getElementById("mapName").innerText = mapName;
+
+let map =
+{
+	'name': 'Experimentation',
+	'src': 'maps/Experimentation.webp',
+	'flooded_src': 'maps/flooded/Experimentation_Flooded_Timelapse.webp'
+}
+
+function changeMoon(mapImageName, hasFlooded, mapName=null)
+{
+	map = {
+		"name": (mapName) ? mapImageName : mapName,
+		"src": "maps/" + mapImageName + ".webp",
+		"flooded_src": hasFlooded ? ("maps/flooded/" + mapImageName + "_Flooded_Timelapse.webp") : null
+	}
+
+	document.getElementById("mapName").innerText = map.name;
+	document.getElementById("floodedCheck").disabled = (map.flooded_src) ? false : true;
+	changeFlooded();
+}
+
+function changeFlooded()
+{
+	document.getElementById("mapImage").src = (map.flooded_src && document.getElementById("floodedCheck").checked) ? map.flooded_src : map.src
 }
 </script>
